--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "peerDependencies": {
-    "react": "~0.13.3"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/fallengods0/react-raf-batching"
@@ -18,5 +15,11 @@
     "requestanimationframe"
   ],
   "author": "Pete Hunt",
-  "license": "Apache 2"
+  "license": "Apache 2",
+  "peerDependencies": {
+    "react": "~0.13.3"
+  },
+  "dependencies": {
+    "raf": "^3.1.0"
+  }
 }
